replaced perform command with actual logic