@@ -5,6 +5,7 @@ import com.ftxeven.aircore.core.modules.gui.GuiDefinition;
 import com.ftxeven.aircore.core.modules.gui.GuiDefinition.GuiItem;
 import com.ftxeven.aircore.core.modules.gui.GuiManager;
 import com.ftxeven.aircore.core.modules.gui.ItemAction;
+import com.ftxeven.aircore.util.MessageUtil;
 import com.ftxeven.aircore.util.PlaceholderUtil;
 import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.Bukkit;
@@ -274,15 +275,37 @@ public final class HomeManager implements GuiManager.CustomGuiManager {
 
     private void executeHomeActions(List<String> actions, String homeName, Player viewer) {
         Map<String, String> ph = Map.of("name", homeName, "player", viewer.getName());
+        UUID uuid = viewer.getUniqueId();
+        String nameLower = homeName.toLowerCase();
+
         for (String action : actions) {
             if (action.equalsIgnoreCase("[teleport]")) {
-                viewer.performCommand("home " + homeName);
-            } else if (action.equalsIgnoreCase("[delete]")) {
-                if (viewer.hasPermission("aircore.command.delhome")) {
-                    viewer.performCommand("delhome " + homeName);
-                    Bukkit.getScheduler().runTaskLater(plugin, () ->
-                            plugin.gui().openGui("homes", viewer, Collections.emptyMap()), 1L);
+                Location loc = plugin.home().homes().getHomes(uuid).get(nameLower);
+
+                if (loc == null) {
+                    MessageUtil.send(viewer, "homes.errors.not-found", Map.of("name", homeName));
+                    continue;
                 }
+
+                plugin.core().teleports().startCountdown(viewer, viewer, () -> {
+                    plugin.core().teleports().teleport(viewer, loc);
+                    MessageUtil.send(viewer, "homes.teleport.success", Map.of("name", homeName));
+                }, reason -> MessageUtil.send(viewer, "homes.teleport.cancelled", Map.of("name", homeName)));
+
+            } else if (action.equalsIgnoreCase("[delete]")) {
+                if (!viewer.hasPermission("aircore.command.delhome")) continue;
+
+                plugin.home().homes().deleteHome(uuid, nameLower);
+                plugin.database().homes().delete(uuid, nameLower);
+
+                MessageUtil.send(viewer, "homes.management.deleted", Map.of("name", homeName));
+
+                plugin.scheduler().runEntityTask(viewer, () -> {
+                    if (viewer.getOpenInventory().getTopInventory().getHolder() instanceof HomeHolder) {
+                        refresh(viewer.getOpenInventory().getTopInventory(), viewer, Collections.emptyMap());
+                    }
+                });
+
             } else {
                 itemAction.execute(action, viewer, ph);
             }
